# NuSD

./: CMakeLists.txt  HISTORY  LICENCE.txt  NuSD.cc  NuSD_config.h.in  README.md  README.txt
EljenScintillators/include/: EJ200MatBuilder.hh  EJ260MatBuilder.hh  EJ335MatBuilder.hh  EJ426MatBuilder.hh  ScintillatorFactory.hh
EljenScintillators/macros/: ej-200.mac  ej-260.mac  ej-335.mac  ej-426.mac  gdDopedWater.mac
EljenScintillators/src/: EJ200MatBuilder.cc  EJ260MatBuilder.cc  EJ335MatBuilder.cc  EJ426MatBuilder.cc  ScintillatorFactory.cc
NuSDMaterials/include/: AirMatBuilder.hh  AluminizedMylarMatBuilder.hh  CementMatBuilder.hh  CustomEJ254MatBuilder.hh  CustomEJ309MatBuilder.hh  FepMatBuilder.hh  FluorinatedAcrylicMatBuilder.hh  GdCoatingMatBuilder.hh  GreaseMatBuilder.hh  PmmaMatBuilder.hh  PolystyreneMatBuilder.hh
NuSDMaterials/macros/: air.mac  aluminizedMylar.mac  cement.mac  customEJ-254.mac  customEJ-309.mac  fep.mac  fluorinatedAcrylic.mac  grease.mac  pmma.mac  polystyrene.mac
NuSDMaterials/src/: AirMatBuilder.cc  AluminizedMylarMatBuilder.cc  CementMatBuilder.cc  CustomEJ254MatBuilder.cc  CustomEJ309MatBuilder.cc  FepMatBuilder.cc  FluorinatedAcrylicMatBuilder.cc  GdCoatingMatBuilder.cc  GreaseMatBuilder.cc  PmmaMatBuilder.cc  PolystyreneMatBuilder.cc
OPSimTool/include/: FileReader.hh  MaterialPropertiesTable.hh  OpticalSurfaceMessenger.hh  VMaterialBuilder.hh  VMaterialFactory.hh
OPSimTool/src/: FileReader.cc  MaterialPropertiesTable.cc  MaterialPropertiesTableMessenger.cc  OpticalSurface.cc  OpticalSurfaceMessenger.cc  VMaterialBuilder.cc  VMaterialFactory.cc
analysis/ADE/: ade.cpp
analysis/LightCollectionEfficiency/: lce.cpp
analysis/NeutronCaptureEfficiency/: nce.cpp
analysis/NeutronCaptureTime/: nct.cpp
analysis/NuSDEventResults/: nuSD.cpp
analysis/generic/: generic.cpp
data/: readme.txt
data/materials/: Air_absSpect.txt  Air_refSpect.txt  CustomEj309_absSpect.txt  CustomEj309_refSpect.txt  Ej200_absSpect.txt  Ej200_emissionSpect.txt  Ej254_absSpect.txt  Ej254_emissionSpect.txt  Ej254_refSpect.txt  Ej260_absSpect.txt  Ej260_refSpect.txt  Ej335_refSpect.txt  Ej426_refSpect.txt  Fep_refSpect.txt  FibCore_emissionSpect.txt  FibCore_refSpect.txt  PetAbsSpect.txt  PetRefSpect.txt  PetSpect.txt
data/photoSensors/: MppcQE_spect.txt
data/reflectors/: Reflector_spect.txt
macros/: IBDPrimary.mac  NuSDVCompositeDet.mac  NuSDVDet.mac  chandler.mac  common.mac  default.mac  genericPrimary.mac  gun.mac  hsp.mac  init.mac  interactive.mac  nulat.mac  optReadout.mac  panda.mac  photoSensorSurface.mac  prospect.mac  reflectorSurface.mac  run.mac  solid.mac  sweany.mac  vis.mac
neutrinoSpectrum/: nuSpect.root  readFile.cpp  writeFile.cpp
shared/include/: NuSDActionInitialization.hh  NuSDAnalysisManager.hh  NuSDDetType.hh  NuSDEventAction.hh  NuSDFileManager.hh  NuSDGenericAnalysisManager.hh  NuSDGenericPrimaryGeneratorAction.hh  NuSDGenericPrimaryGeneratorMessenger.hh  NuSDMaterialFactory.hh  NuSDNeutrinoSD.hh  NuSDNeutrinoSDHit.hh  NuSDNeutronSD.hh  NuSDNeutronSDHit.hh  NuSDPhotoSensorProperties.hh  NuSDPhotoSensorPropertiesMessenger.hh  NuSDPhotoSensorSurface.hh  NuSDPhotonSD.hh  NuSDPhotonSDHit.hh  NuSDPhysicsList.hh  NuSDPhysicsListMessenger.hh  NuSDPmtProperties.hh  NuSDPmtPropertiesMessenger.hh  NuSDPmtReadoutUnit.hh  NuSDPrimaryGeneratorAction.hh  NuSDPrimaryGeneratorMessenger.hh  NuSDReflectorProperties.hh  NuSDReflectorPropertiesMessenger.hh  NuSDReflectorSurface.hh  NuSDRunAction.hh  NuSDSimParameters.hh  NuSDSimParametersMessenger.hh  NuSDStackingAction.hh  NuSDSteppingAction.hh  NuSDVCompositeDetConstruction.hh  NuSDVCompositeDetMessenger.hh  NuSDVDetConstruction.hh  NuSDVDetMessenger.hh  NuSDVOptReadoutUnit.hh  NuSDVPrimaryGeneratorAction.hh  NuSDVPrimaryGeneratorMessenger.hh
shared/src/: NuSDActionInitialization.cc  NuSDAnalysisManager.cc  NuSDEventAction.cc  NuSDFileManager.cc  NuSDGenericAnalysisManager.cc  NuSDGenericPrimaryGeneratorAction.cc  NuSDGenericPrimaryGeneratorMessenger.cc  NuSDMaterialFactory.cc  NuSDNeutrinoSD.cc  NuSDNeutrinoSDHit.cc  NuSDNeutronSD.cc  NuSDNeutronSDHit.cc  NuSDPhotoSensorProperties.cc  NuSDPhotoSensorPropertiesMessenger.cc  NuSDPhotoSensorSurface.cc  NuSDPhotonSD.cc  NuSDPhotonSDHit.cc  NuSDPhysicsList.cc  NuSDPhysicsListMessenger.cc  NuSDPmtProperties.cc  NuSDPmtPropertiesMessenger.cc  NuSDPmtReadoutUnit.cc  NuSDPrimaryGeneratorAction.cc  NuSDPrimaryGeneratorMessenger.cc  NuSDReflectorProperties.cc  NuSDReflectorPropertiesMessenger.cc  NuSDReflectorSurface.cc  NuSDRunAction.cc  NuSDSimParameters.cc  (+10 more)
testRun/: README.txt  generic.txt  inverseBetaDecay.txt
(+91 files in other folders)
